# Muyo

./: .clang-format  .clang-tidy  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .helloVulkan.cpp.swp  .vimspector.json  Buffer.h  CMakeLists.txt  ContextBase.h  ContextManager.h  DepthResource.h  ImmediateContext.h  Makefile  README.md  RenderDocSettings.cap  Texture.hpp  UIoverlay.h  UniformBuffer.h  VertexBuffer.h  camera.hpp  context.cpp  context.hpp  env_linux  env_mac  frag.spv  helloVulkan  helloVulkan.cpp  run.sh  todo.md  triangle.frag  triangle.vert  vert.spv
.github/workflows/: ccpp.yml  linux.yml  windows.yml
assets/: sphereArray.gltf
assets/Balls/: scene.gltf
assets/Cornell_box_Emissive/: untitled.gltf
assets/Cornell_box_Spot/: scene.gltf
assets/bruce/: bruce.mtl
assets/hdr/: gray.hdr  white.hdr
assets/helmet/: scene.gltf
assets/mazda_mx-5/: scene.gltf
assets/mazda_mx-5_spot/: untitled.gltf
assets/triangle/: scene.gltf
debug_vk/debug_vk.xcodeproj/: project.pbxproj
debug_vk/debug_vk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
debug_vk/debug_vk.xcodeproj/project.xcworkspace/xcuserdata/Tsing.xcuserdatad/: UserInterfaceState.xcuserstate
helloVulkan.dSYM/Contents/: Info.plist
helloVulkan.dSYM/Contents/Resources/DWARF/: helloVulkan
include/interface/: key.h  mouse.h
shaders/: Camera.h  CubeMapToIrradianceMap.frag  CubeMapToIrradianceMap.vert  GBuffer.frag  GBuffer.vert  GBufferSubpass.frag  GeneratePrefilteredCubemap.frag  GenerateSpecularBrdfLut.frag  RSM.h  Skybox.frag  Skybox.vert  brdf.h  directLighting.h  equirectangularToCubeMap.frag  equirectangularToCubeMap.vert  gaussianSplats.frag.slang  gaussianSplats.vert.slang  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  lighting_rsm.frag  lights.h  linearizeDepth.comp  material.h  meshShader.frag.slang  meshShader.mesh.slang  pathTracing.rchit  pathTracing.rgen  pathTracing.rmiss  pathTracingPayload.h  random.h  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceShadow.rmiss  shadow.frag  shadow.vert  shadows.h  shmem.comp  (+5 more)
shaders/Sorting/: SortCommon.hlsl
shaders/shared/: SharedStructures.h
src/: AccelerationStructureBuffer.h  Buffer.h  Camera.cpp  Camera.h  Context.cpp  ContextBase.h  ContextManager.h  Debug.cpp  Debug.h  DebugUI.cpp  DebugUI.h  DebugUIManager.h  DepthResource.h  DescriptorManager.cpp  DescriptorManager.h  Event.h  EventSystem.h  GLFWSwapchain.cpp  GLFWSwapchain.h  Geometry.cpp  Geometry.h  HWContext.cpp  HWContext.h  ImGuiControl.h  ImGuiGlfwControl.h  ImageStorageResource.cpp  ImageStorageResource.h  ImmediateContext.cpp  ImmediateContext.h  ImmediateContextInfo.h  Key.h  LightSceneNode.h  Material.cpp  Material.h  MeshProcessor.cpp  MeshProcessor.h  MeshResoruceManager.cpp  MeshResoruceManager.h  MeshResourceManager.cpp  MeshResourceManager.h  (+87 more)
src/Debug/: DebugUI.cpp  DebugUI.h
src/RenderDevice/: Debug.cpp  Debug.h  PipelineStateBuilder.cpp  PipelineStateBuilder.h  RenderPassGEMM.cpp  RenderPassGEMM.h  ResourceBarrier.cpp  ResourceBarrier.h  VkExtFuncsLoader.cpp  VkExtFuncsLoader.h  VkMemoryAllocator.cpp  VkMemoryAllocator.h  VkRenderDevice.cpp  VkRenderDevice.h
src/RenderGraph/: DependencyGraph.h  RenderGraph.h  RenderGraphBuilder.h  RenderGraphNode.h  RenderGraphResourceHandle.h
src/RenderPasses/: DrawCommandBuffer.h  RenderLayerIBL.cpp  RenderLayerIBL.h  RenderPass.cpp  RenderPass.h  RenderPassAO.cpp  RenderPassCubeMapGeneration.cpp  RenderPassCubeMapGeneration.h  RenderPassGBuffer.cpp  RenderPassGBuffer.h  RenderPassGBufferLighting.cpp  RenderPassGBufferLighting.h  RenderPassGBufferMeshShader.cpp  RenderPassGBufferMeshShader.h  RenderPassGaussianSplats.cpp  RenderPassGaussianSplats.h  RenderPassManager.cpp  RenderPassManager.h  RenderPassOpaqueLighting.cpp  RenderPassOpaqueLighting.h  RenderPassParameters.cpp  RenderPassParameters.h  RenderPassRSM.cpp  RenderPassRSM.h  RenderPassRayTracing.cpp  RenderPassSkybox.cpp  RenderPassSkybox.h  RenderPassTransparent.cpp  RenderPassTransparent.h  RenderPassUI.cpp  RenderPassUI.h  RenderResourceNames.h  ShadowPassManager.cpp  ShadowPassManager.h  SwapchainImageResource.cpp  SwapchainImageResource.h
src/RenderResources/: DescriptorManager.cpp  DescriptorManager.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  MeshVertex.h  PushConstantBlocks.h  RenderResource.h  RenderResourceManager.h  RenderTargetResource.h  SamplerManager.h  StorageImageResource.h  Texture.cpp  Texture.h  UniformBuffer.h
src/Scene/: GaussainSplatsSceneImporter.cpp  GaussainSplatsSceneImporter.h  GaussianSplattingSceneNode.h  LightSceneNode.h  RayTracingSceneManager.cpp  RayTracingSceneManager.h  Scene.cpp  Scene.h  SceneImporter.cpp  SceneImporter.h  SceneManager.cpp  SceneManager.h
src/app/: PSOCompiler.cpp  helloVulkan.cpp
src/tests/: testRenderGraph.cpp  testSceneImporter.cpp
